// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TomorrowListPage render correct with tasks 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="content"
    >
      <div
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <div
          class="mb-3"
        >
          Задачи на завтра
        </div>
        <ul
          class="list"
        >
          <li
            class="li"
          >
            <div
              class="content content_border"
            >
              <span
                class="task"
              >
                <button
                  aria-label="delete task"
                  class="button"
                  data-testid="delete-button"
                  name="delete task"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.854 12.854c-0-0-0-0-0-0l-4.854-4.854 4.854-4.854c0-0 0-0 0-0 0.052-0.052 0.090-0.113 0.114-0.178 0.066-0.178 0.028-0.386-0.114-0.529l-2.293-2.293c-0.143-0.143-0.351-0.181-0.529-0.114-0.065 0.024-0.126 0.062-0.178 0.114 0 0-0 0-0 0l-4.854 4.854-4.854-4.854c-0-0-0-0-0-0-0.052-0.052-0.113-0.090-0.178-0.114-0.178-0.066-0.386-0.029-0.529 0.114l-2.293 2.293c-0.143 0.143-0.181 0.351-0.114 0.529 0.024 0.065 0.062 0.126 0.114 0.178 0 0 0 0 0 0l4.854 4.854-4.854 4.854c-0 0-0 0-0 0-0.052 0.052-0.090 0.113-0.114 0.178-0.066 0.178-0.029 0.386 0.114 0.529l2.293 2.293c0.143 0.143 0.351 0.181 0.529 0.114 0.065-0.024 0.126-0.062 0.178-0.114 0-0 0-0 0-0l4.854-4.854 4.854 4.854c0 0 0 0 0 0 0.052 0.052 0.113 0.090 0.178 0.114 0.178 0.066 0.386 0.029 0.529-0.114l2.293-2.293c0.143-0.143 0.181-0.351 0.114-0.529-0.024-0.065-0.062-0.126-0.114-0.178z"
                    />
                  </svg>
                </button>
                <span
                  class="taskName"
                >
                  task0
                </span>
              </span>
              <button
                aria-label="repeat task"
                class="button"
                data-testid="repeat-button"
                name="repeat task"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M13.828 1.686l8.486 8.486-1.415 1.414-.707-.707-4.242 4.242-.707 3.536-1.415 1.414-4.242-4.243-4.95 4.95-1.414-1.414 4.95-4.95-4.243-4.242 1.414-1.415L8.88 8.05l4.242-4.242-.707-.707 1.414-1.415zm.708 3.536l-4.671 4.67-2.822.565 6.5 6.5.564-2.822 4.671-4.67-4.242-4.243z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="completed-tasks"
      >
        <div
          class="mb-3"
        >
          Выполненые задачи
        </div>
        <ul
          class="list"
        >
          <li
            class="li"
          >
            <div
              class="content content_border"
            >
              <span
                class="task"
              >
                <button
                  aria-label="delete task"
                  class="button"
                  data-testid="delete-button"
                  name="delete task"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    version="1.1"
                    viewBox="0 0 16 16"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.854 12.854c-0-0-0-0-0-0l-4.854-4.854 4.854-4.854c0-0 0-0 0-0 0.052-0.052 0.090-0.113 0.114-0.178 0.066-0.178 0.028-0.386-0.114-0.529l-2.293-2.293c-0.143-0.143-0.351-0.181-0.529-0.114-0.065 0.024-0.126 0.062-0.178 0.114 0 0-0 0-0 0l-4.854 4.854-4.854-4.854c-0-0-0-0-0-0-0.052-0.052-0.113-0.090-0.178-0.114-0.178-0.066-0.386-0.029-0.529 0.114l-2.293 2.293c-0.143 0.143-0.181 0.351-0.114 0.529 0.024 0.065 0.062 0.126 0.114 0.178 0 0 0 0 0 0l4.854 4.854-4.854 4.854c-0 0-0 0-0 0-0.052 0.052-0.090 0.113-0.114 0.178-0.066 0.178-0.029 0.386 0.114 0.529l2.293 2.293c0.143 0.143 0.351 0.181 0.529 0.114 0.065-0.024 0.126-0.062 0.178-0.114 0-0 0-0 0-0l4.854-4.854 4.854 4.854c0 0 0 0 0 0 0.052 0.052 0.113 0.090 0.178 0.114 0.178 0.066 0.386 0.029 0.529-0.114l2.293-2.293c0.143-0.143 0.181-0.351 0.114-0.529-0.024-0.065-0.062-0.126-0.114-0.178z"
                    />
                  </svg>
                </button>
                <span
                  class="taskName"
                >
                  done task
                </span>
              </span>
              <button
                aria-label="again task"
                class="button"
                data-testid="again-button"
                name="again task"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M16 7h-5a6 6 0 1 0 0 12h9v2h-9a8 8 0 1 1 0-16h5V1l6 5-6 5V7z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without init 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="content"
    >
      <div
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <div
          class="spinner-border spinner"
          role="status"
        >
          <span
            class="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </div>
      <div
        class="completed-tasks"
      >
        <div
          class="spinner-border spinner"
          role="status"
        >
          <span
            class="visually-hidden"
          >
            Loading...
          </span>
        </div>
      </div>
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`TomorrowListPage render correct without tasks 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="content"
    >
      <div
        class="tomorrow-tasks"
      >
        <div
          class="my-4"
        >
          <form
            action="#"
          >
            <div
              class="mb-1"
            >
              <input
                autocomplete="off"
                class="form-control newTask"
                id="newTask"
                name="newTask"
                placeholder="Новая Задача"
                type="text"
                value=""
              />
            </div>
          </form>
        </div>
        <div
          class="mb-3"
        >
          Задачи на завтра
        </div>
        <span
          class="taskList__comment"
        >
          Нет новых задач
        </span>
      </div>
      <div
        class="completed-tasks"
      >
        <div
          class="mb-3"
        >
          Выполненые задачи
        </div>
        <span
          class="taskList__comment"
        >
          Нет выполненых задач
        </span>
      </div>
    </div>
  </div>
   
</DocumentFragment>
`;
